Issue #242: Added some bug fixes and UI & UX updates

--- a/infomapper/src/app/map-components/dialog-content/dialog-data-table/dialog-data-table.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-data-table/dialog-data-table.component.html
@@ -22,6 +22,7 @@
       <input matInput
               (keyup)="applyFilter($event)"
               placeholder="Filter all columns using the filter string. Press Enter to execute the filter."
+              cdkFocusInitial
               #input>
     </mat-form-field>
 
