--- a/infomapper/src/app/map-components/map.component.css
+++ b/infomapper/src/app/map-components/map.component.css
@@ -11,14 +11,6 @@ button.mat-menu-item {
   width: 170px !important;
 }
 
-.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
-  background-color: #64b2f1;
-}
-
-.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
-  background-color: #016dc5;
-}
-
 /* Changes the amount of pixels surrounding the <hr> divider class that separates each geoLayerView in the side bar */
 hr.divider {
   margin-top: 8px;
@@ -276,8 +268,20 @@ green that has been represented throughout the rest of the Info Mapper */
   height:100px;
 }
 
-.mat-icon-button:hover .dots {
+.mat-icon-button:hover .green-dots {
   color: #9DB66B;
+}
+
+.mat-icon-button:hover .white-dots {
+  color: whitesmoke;
+}
+
+.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+  background-color: #64b2f1;
+}
+
+.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+  background-color: #016dc5;
 }
 
 .menu {
