--- a/infomapper/src/app/content-page/content-page.component.html
+++ b/infomapper/src/app/content-page/content-page.component.html
@@ -1,4 +1,4 @@
 <!-- The global Showdown container that users can change to different font types, sizes, etc. -->
-<div class="showdown-container">
+<div [ngClass]="browserWidth > 500 ? 'showdown-container' : 'showdown-container-mobile'">
   <showdown [value]="showdownHTML" [options]="options" class="markdown-div"></showdown>
 </div>
