Issue #331: Added the base code for an Image Gallery

--- a/infomapper/src/app/map-components/dialog-content/dialog-data-table/dialog-data-table.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-data-table/dialog-data-table.component.html
@@ -112,7 +112,7 @@
           <button mat-menu-item
                   class="zoom-to-selected"
                   (click)="zoomToFeatures()"
-                  [disabled]="leafletData | zoomDisable: geoLayerId">
+                  [disabled]="selectedLayers | zoomDisable: geoLayerId">
             <i class="fa fa-search-plus fa-2x"></i>
             Zoom to selected features
           </button>
