--- a/infomapper/src/app/map-components/map.component.css
+++ b/infomapper/src/app/map-components/map.component.css
@@ -131,6 +131,11 @@ table.layerOptions {
   padding-right: 5%;
 }
 
+.fa-picture-o {
+  vertical-align: middle;
+  padding-right: 4.5%;
+}
+
 /* Styles only the font awesome table in the menu popup when the vertical dots are clicked */
 .fa-table {
   vertical-align: middle;
@@ -224,6 +229,28 @@ green that has been represented throughout the rest of the Info Mapper */
 	margin-bottom: 0px;
 }
 
+.feature-label::before {
+  border: 0px;
+}
+
+.feature-label {
+  background:rgb(129, 0, 0);
+  border-color: black;
+  border-radius: 5px;
+  color:white;
+  font-weight:bold;
+  margin: 0px;
+  text-align: center;
+}
+
+.leaflet-div-icon {
+  background:rgb(129, 0, 0);
+  border-radius: 5px;
+  color:white;
+  font-weight:bold;
+  text-align:center;
+}
+
 .layer-icon {
   margin-left:5px;
 }
@@ -257,6 +284,10 @@ green that has been represented throughout the rest of the Info Mapper */
 
 .leaflet-left .leaflet-control {
 	margin-left:7px!important;
+}
+
+.leaflet-tooltip {
+  padding: 0px 4px 0px 4px;
 }
 
 .map-title {
