--- a/infomapper/src/styles.css
+++ b/infomapper/src/styles.css
@@ -15,15 +15,26 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 /* CLASSES */
 
-/* This is for the Dialog Content Component. It is CSS that overrides the default behavior for the mat-dialog-container 
-created and shown as the background for the Dialog popup. Here, the padding, color, and any other changes can be made.
-VERY IMPORTANT for resizing all dialogs */
+/* This is for a Dialog Content Component. It is CSS that overrides the default behavior for the mat-dialog-container
+created and shown as the background for the Dialog popup. Whereas the class call below changes both this div and its
+child, this will change only the sizing on the outer div. VERY IMPORTANT for resizing all dialogs. */
 .custom-dialog-container {
   overflow: auto;
   resize: both; 
 }
 
-.custom-dialog-container .mat-dialog-container{
+/* Sets the padding and height of both the .custom-dialog-container outer div and its child .mat-dialog-container. */
+.custom-dialog-container .mat-dialog-container {
+  padding-top: 0%;
+  padding-left: 0%;
+  padding-right: 0%;
+  padding-bottom: 0%;
+  height: 100%;
+}
+
+/* Similar to .custom-dialog-container, but does not have the option for resizing, so the resizing lines in the bottom-left
+hand corner of the Dialog do not appear to the user. */
+.custom-dialog-container-no-resize .mat-dialog-container {
   padding-top: 0%;
   padding-left: 0%;
   padding-right: 0%;
