Fixed gapminder bug

--- a/infomapper/src/app/map-components/dialog-content/dialog-gallery/dialog-gallery.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-gallery/dialog-gallery.component.html
@@ -14,8 +14,8 @@
     </button>
   </div>
 
+  <!-- Display the Images in the Gallery inside of the Dialog -->
   <div class="gallery-content">
-    <!-- <showdown [value]="display" class="markdown-div"></showdown> -->
     <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
   </div>  
 
