Issues #262, #346: Removed warnings when using ng build (not including budgets)

--- a/infomapper/src/app/map-components/dialog-content/dialog-gapminder/dialog-gapminder.component.css
+++ b/infomapper/src/app/map-components/dialog-content/dialog-gapminder/dialog-gapminder.component.css
@@ -1,8 +1,8 @@
-@import './css/style.css';
-@import './css/loader.css';
-@import './css/select2.min.css';
-@import './css/clusterize.css';
-@import './css/gapminder_bootstrap.css';
+@import './gapminder-js/css/style.css';
+@import './gapminder-js/css/loader.css';
+@import './gapminder-js/css/select2.min.css';
+@import './gapminder-js/css/clusterize.css';
+@import './gapminder-js/css/gapminder_bootstrap.css';
 
 /* CLASSES */
 
