Issue #340: Added the ability to show a raster layers properties in a dialog

--- a/infomapper/src/app/map-components/dialog-content/dialog-properties/dialog-properties.component.css
+++ b/infomapper/src/app/map-components/dialog-content/dialog-properties/dialog-properties.component.css
@@ -30,6 +30,10 @@
   background-color: #c2c1c1;
 }
 
+.raster-properties {
+  font-family: 'Courier New', Courier, monospace;
+}
+
 /*  */
 .upper-close-button {
   background-color: #c2c1c1;
