--- a/infomapper/src/app/map-components/dialog-content/dialog-doc/dialog-doc.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-doc/dialog-doc.component.html
@@ -1,7 +1,7 @@
 <!-- The draggable <h1> element so a user can move a graph around anywhere on the screen -->
 <div cdkDrag cdkDragRootElement=".cdk-overlay-pane">
   <!-- The draggable <h1> element so a user can move a graph around anywhere on the screen, but only using the h1 -->
-  <div mat-dialog-title cdkDragHandle class="drag-header">
+  <div mat-dialog-title cdkDragHandle class="drag-header-main">
     <!-- Display a geoMap, geoLayerViewGroup, or geoLayerView name along with Information when showing documentation -->
     <div class="header-div">
       <p class="header-title">
