--- a/infomapper/src/app/map-components/dialog-content/dialog-data-table/dialog-data-table.component.css
+++ b/infomapper/src/app/map-components/dialog-content/dialog-data-table/dialog-data-table.component.css
@@ -9,6 +9,12 @@ button.mat-menu-item {
   padding: 0px 8px 0px 8px;
 }
 
+mat-form-field {
+  font-size: 14px;
+  height: 50px;
+  width: 100%;
+}
+
 /* Table width for the Mat Table */
 table {
   width: 100%;
@@ -53,6 +59,31 @@ due to the way the table is drawn, but shrinking it slightly to 94.5% is doable 
   overflow: auto;
 }
 
+.data-table-content {
+  height: calc(100% - 90px);
+  padding: 0px 15px 10px 15px;
+  /* overflow-x: auto; */
+  /* overflow-y: auto; */
+}
+
+.data-table-components-group {
+  float: right;
+  height: 50px;
+  width: 100%;
+}
+
+.data-table-components-group button {
+  margin: 0px 20px 0px 0px;
+  background-color: #c2c1c1;
+}
+
+/* Div class that takes up 5.5% of the height of the dialog and is gray to differentiate itself from the dialog content */
+.drag-header-main {
+  background-color: #e6e6e6;
+  height: 40px;
+  margin: 0px;
+}
+
 .fa-search-plus {
   vertical-align: middle;
   padding-right: 5%;
@@ -83,6 +114,7 @@ due to the way the table is drawn, but shrinking it slightly to 94.5% is doable 
 }
 
 .kebab-menu {
+  background-color: white !important;
   float: right;
 }
 
@@ -131,12 +163,6 @@ will hide the rest of a long string in a fixed-layout table, and won't wrap, cre
   background-color: #e6e6e6;
 }
 
-.mat-form-field {
-  font-size: 14px;
-  height: 8%;
-  width: 100%;
-}
-
 .mat-row {
   height: auto;
 }
@@ -166,7 +192,7 @@ will hide the rest of a long string in a fixed-layout table, and won't wrap, cre
 
 .table-rows-selected {
   display: inline-block;
-  margin: 7px 20px 0px 0px;
+  margin: 7px 20px 0px 15px;
 }
 
 .table-save-csv {
@@ -177,13 +203,13 @@ will hide the rest of a long string in a fixed-layout table, and won't wrap, cre
 .upper-close-button {
   background-color: #c2c1c1;
   height: 100%;
-  width: 10%;
+  width: 80px;
   float: right;
   outline: none;
 }
 
 .wrapper {
-  height: 81%;
+  height: calc(100% - 55px);
 }
 
 .zoom-to-selected {
