--- a/infomapper/src/app/map-components/dialog-content/dialog-tstable/dialog-tstable.component.css
+++ b/infomapper/src/app/map-components/dialog-content/dialog-tstable/dialog-tstable.component.css
@@ -1,5 +1,11 @@
 /* TAGS */
 
+mat-form-field {
+  font-size: 14px;
+  height: 50px;
+  width: 100%;
+}
+
 /* Table width for the Mat Table */
 table {
   width: 100%;
@@ -33,6 +39,12 @@ th.mat-header-cell {
 ::ng-deep.mat-form-field-ripple {
  /*change color of underline when focused*/
  background-color: #9DB66B !important;;
+}
+
+.drag-header-main {
+  background-color: #e6e6e6;
+  height: 40px;
+  margin: 0px;
 }
 
 .filter-not-found-cell {
@@ -93,12 +105,6 @@ will hide the rest of a long string in a fixed-layout table, and won't wrap, cre
   padding-right: 5px;
 }
 
-.mat-form-field {
-  font-size: 14px;
-  height: 8%;
-  width: 100%;
-}
-
 .mat-row {
   height: auto;
 }
@@ -111,7 +117,7 @@ will hide the rest of a long string in a fixed-layout table, and won't wrap, cre
 take up too much space vertically in the Dialog. The draggable <h1> is 5% of the Dialog height, so this
 <div> can be technically 95%. Making it 95% is just slightly too big and creates some problems, maybe
 due to the way the table is drawn, but shrinking it slightly to 94.5% is doable */
-.table-box {
+.table-contents {
   height: 94.5%;
   width: 100%;
   padding-left: 15px;
@@ -123,14 +129,22 @@ due to the way the table is drawn, but shrinking it slightly to 94.5% is doable 
   float: right;
 }
 
-.table-info-components {
-  height: 11%;
-  padding-top: 20px;
+.tstable-content {
+  height: calc(100% - 96px);
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  overflow: auto;
+}
+
+.tstable-components-group {
+  height: 50px;
+  padding-top: 8px;
   position: relative;
 }
 
 .table-rows-selected {
-  margin: 0px 20px 0px 0px;
+  margin: 0px 20px 0px 15px;
   float: left;
 }
 
@@ -145,13 +159,13 @@ due to the way the table is drawn, but shrinking it slightly to 94.5% is doable 
 }
 
 .wrapper {
-  height: 80%;
+  height: calc(100% - 55px);
 }
 
 .upper-close-button {
   background-color: #c2c1c1;
   height: 100%;
-  width: 10%;
+  width: 80px;
   float: right;
   outline: none;
 }
